k8s/etapa-3.5/01-api-contas-service-monitor-fix.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-contas
  namespace: tipsbank-contas
  labels:
    app: api-contas

spec:
  type: ClusterIP

  selector:
    app: api-contas

  ports:
    - name: http
      port: 8080
      targetPort: 8080
