k8s/etapa-3.5/02-api-transacoes-service-monitor-fix.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-transacoes
  namespace: tipsbank-transacoes
  labels:
    app: api-transacoes

spec:
  type: ClusterIP

  selector:
    app: api-transacoes
    version: v1

  ports:
    - name: http
      port: 8080
      targetPort: 8080
