k8s/etapa-3.5/03-auditoria-service-monitor-fix.yaml
apiVersion: v1
kind: Service
metadata:
  name: auditoria
  namespace: tipsbank-auditoria
  labels:
    app: auditoria

spec:
  type: ClusterIP

  selector:
    app: auditoria

  ports:
    - name: http
      port: 8080
      targetPort: 8080
