k8s/etapa-3.5/02-prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: tipsbank-monitoring
  annotations:
    cert-manager.io/cluster-issuer: tipsbank-selfsigned
spec:
  ingressClassName: nginx

  tls:
  - hosts:
      - prometheus.tipsbank.local
    secretName: prometheus-tls

  rules:
  - host: prometheus.tipsbank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
