k8s/etapa-3.5/03-alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: tipsbank-monitoring
  annotations:
    cert-manager.io/cluster-issuer: tipsbank-selfsigned
spec:
  ingressClassName: nginx
  
  tls:
  - hosts:
      - alertmanager.tipsbank.local
    secretName: alertmanager-tls

  rules:
  - host: alertmanager.tipsbank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port:
              number: 9093
