k8s/etapa-3.5/allow-prometheus-to-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-api-contas
  namespace: tipsbank-contas
spec:
  podSelector:
    matchLabels:
      app: api-contas
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tipsbank-monitoring
      ports:
        - protocol: TCP
          port: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-api-transacoes
  namespace: tipsbank-transacoes
spec:
  podSelector:
    matchLabels:
      app: api-transacoes
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tipsbank-monitoring
      ports:
        - protocol: TCP
          port: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-auditoria
  namespace: tipsbank-auditoria
spec:
  podSelector:
    matchLabels:
      app: auditoria
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tipsbank-monitoring
      ports:
        - protocol: TCP
          port: 8080
